samples/_failures_safe/1761706791_acf572_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dccf95e.c: In function ‘main’:
./samples/SAFE/__tmp_0dccf95e.c:149:17: error: expected expression at end of input
  149 |                 if (
      |                 ^~
./samples/SAFE/__tmp_0dccf95e.c:149:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dccf95e.c:149:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dccf95e.c:149:17: error: expected declaration or statement at end of input
